@@ -1,6 +1,7 @@
 <pre>
 2008-06-xx:
     * version 1.2
+    * don't pass any ctrl- or alt- prefixed keys to firefox in insert mode
     * keywords in :open <arg> have higher priority than local files now
 
 2008-06-03:
